--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -36,15 +36,15 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: ${INSTALLFOLDER}/static
+      device: ${INSTALLFOLDER}/data/static
   media:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: ${INSTALLFOLDER}/media
+      device: ${INSTALLFOLDER}/data/media
 
-services: 
+services:
   postgres:
     volumes:
       - postgres_backup_server:/var/backup_server
