--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -46,6 +46,8 @@ volumes:
 
 services:
   postgres:
+    build:
+      target: production
     volumes:
       - postgres_backup_server:/var/backup_server
 
