--- a/vue/package.json
+++ b/vue/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "PROJECT=rudi vue-cli-service serve",
     "build": "vue-cli-service build && gzipper --verbose ./dist",
     "lint": "vue-cli-service lint"
   },
